--- a/sqlVisualizer/visualizer/Components/Shared/SchemaView.razor.css
+++ b/sqlVisualizer/visualizer/Components/Shared/SchemaView.razor.css
@@ -1,7 +1,9 @@
 ﻿.schema-container {
     display: flex;
+    flex: 0 0 250px;
     flex-direction: column;
     border-right: 1px solid rgb(226, 232, 240);
+    width: 250px;
     min-width: 250px;
 }
 
